<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_big"
        tools:background="@drawable/background_gradient"
        tools:context=".ui.home.auth.AuthFragment">

        <ImageView
            android:id="@+id/iv_home_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_home_login"
            style="@style/buttonPrimary"
            android:text="@string/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_home_logo" />

        <Button
            android:id="@+id/btn_home_sign_up"
            style="@style/buttonSecondary"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_home_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>